--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "nodemcu-uploader"]
 	path = nodemcu-uploader
-	url = https://github.com/kmpm/nodemcu-uploader.git
+	url = git@github.com:ellarobotics/nodemcu-uploader.git
